# ID3MP3

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  READE.ME  README.md  STM32F103VETX_FLASH.ld  test5.ioc
APP/: APP_start.c  APP_start.h  LUNAR.c  SHOW.c  bit.h  bmp.c  bmp.h  data.c  data.h  fontupd.c  fontupd.h  gif.c  gif.h  gui.c  gui.h  guix.h  init.c  init.h  jpeg.c  jpeg.h  lunar.h  mp3id3.c  mp3id3.h  mp3player.c  mp3player.h  piclib.c  piclib.h  show.h  text.c  text.h  tjpgd.c  tjpgd.h  touch_check.c  touch_check.h
CORE/: core_cm3.c  core_cm3.h
Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: bit.h  init.c  init.h  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Core/Src/adc/: adc.c  adc.h
Core/Src/data/: data.c  data.h
Core/Src/exfuns/: exfuns.c  exfuns.h
Core/Src/flash/: flash.c  flash.h
Core/Src/font/: font.c  font.h  text.c  text.h
Core/Src/gui/: gui.c  guix.h
Core/Src/jpg/: piclib.c  piclib.h  tjpgd.c  tjpgd.h
Core/Src/key/: key.c  key.h
Core/Src/lcd/: ILI93xx.c  font.h  lcd.h
Core/Src/mp3id3/: mp3id3.c  mp3id3.h
Debug/: makefile  objects.list  sources.mk  test5.list
EMWIN/png/: GUI_PNG.c  GUI_PNG_Private.h  IMAGE_PNG.c
FATFS/: cc936.c  diskio.c  diskio.h  exfuns.c  exfuns.h  fattester.c  fattester.h  ff.c  ff.h  integer.h
HARDWARE/FLASH/: flash.c  flash.h
HARDWARE/IMAGE2LCD/: image1.h  image2lcd.c  image2lcd.h
HARDWARE/KEY/: key.c  key.h
HARDWARE/LCD/: ILI93xx.c  font.h  lcd.h
HARDWARE/MALLOC/: malloc.c  malloc.h
HARDWARE/RTC/: rtc.c  rtc.h
HARDWARE/SD/: sdio_sdcard.c  sdio_sdcard.h
HARDWARE/SPI/: spi.c  spi.h
HARDWARE/STMFLASH/: stmflash.c  stmflash.h
HARDWARE/TOUCH/: touch.c  touch.h
HARDWARE/VS10XX/: VS10XX.c  VS_PATH.h  vs10XX.h
JPG/: piclib.c  piclib.h  tjpgd.c  tjpgd.h
PNG/: png_dec.c  png_dec.h  upng.c  upng.h
SYSTEM/delay/: delay.c  delay.h
SYSTEM/sys/: sys.c  sys.h
UCOSII/CONFIG/: includes.h  os_cfg.h
UCOSIII/uCOS_CONFIG/: includes.h  os_cfg_app.h
USER/: Template.uvgui.Administrator  Template.uvguix.Color_yr  Template.uvguix.YZQ  Template.uvguix.yan_color  Template.uvopt  Template.uvoptx  Template.uvproj.saved_uv4  Template.uvprojx  cpu_a.lst  lib_mem_a.lst  main.c  os_cpu_a.lst  startup_stm32f10x_hd.lst  stm32f10x.h  stm32f10x_conf.h  stm32f10x_it.c  system_stm32f10x.c  system_stm32f10x.h
VS_TEST/: TEST.sln
VS_TEST/TEST/: TEST.vcxproj  TEST.vcxproj.filters
src/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeSettings.json  ID3MP3.ioc  STM32H743VITX_FLASH.ld  STM32H743VITX_RAM.ld  connect.bat  debug.cfg
src/Core/Inc/: FreeRTOSConfig.h  crc.h  jpeg_utils_conf.h  lv_conf.h  main.h  mymem.h  stm32_assert.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
src/Core/Src/: main.c  main.cpp  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  syscalls.c  sysmem.c  system_stm32h7xx.c
src/Core/Src/Flash/: qspi.c  w25q64.c  w25q64.h
src/Core/Src/Font/: myfont.c  myfont.h
src/Core/Src/Init/: init.cpp  init.h
src/Core/Src/Pic/: bmp.c  bmp.h  gif.c  gif.h  jpg.c  jpg.h  piclib.c  piclib.h  png.c  png.h  tjpgd.c  tjpgd.h  upng.c  upng.h
src/Core/Src/Show/: show.c  show.h
src/Core/Src/Tasks/: task_led.cpp  task_led.h  task_start.cpp  task_start.h
src/Core/Src/init/: callback.cpp  callback.h  init.cpp
src/Core/Src/qspi/: psram.c  psram.h  qspi.h  w25q64.c
src/Display/Drivers/: ili9486.c  ili9486.h  lcd.h  lcd_io_gpio8.c  lcd_io_gpio8.h  lcd_ts.c  stm32_adafruit_lcd.c  stm32_adafruit_lcd.h  stm32_adafruit_ts.c  stm32_adafruit_ts.h  ts.h
src/Display/Drivers/lcd/ili9486/: ili9486.c  ili9486.h
src/Display/Drivers/stm32h7xx/: lcd_io_gpio8.c  lcd_io_gpio8.h  lcdts_io_fsmc8.h
src/Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_ll_sdmmc.h
src/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_sd.c  stm32h7xx_ll_sdmmc.c
src/FATFS/App/: exfuns.c  exfuns.cpp  exfuns.h  fatfs.c  fatfs.h  fattester.cpp  fattester.h
src/Lvgl/: CMakeLists.txt
src/Lvgl/src/extra/libs/fsdrv/: lv_fs_fatfs.c
src/Lvgl/src/misc/: lv_mem.c
test/: test.ioc
(+34 files in other folders)
